#4 SPA with Vue Router

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -30629,7 +30629,8 @@ a.text-muted:hover {
 
 [class*="accent-"] a.btn-dark {
   color: #ffffff;
-}@charset "UTF-8";
+}
+/*# sourceMappingURL=adminlte.css.map */@charset "UTF-8";
 
 /*!
  * Font Awesome Free 5.13.0 by @fontawesome - https://fontawesome.com
